fix white space at bottom at moble browser

--- a/mainWeb/src/global.css
+++ b/mainWeb/src/global.css
@@ -1,19 +1,33 @@
+.App,
+#root,
+body,
+html {
+    background: #050505;
+}
+
 .App {
     position: relative;
     width: 100%;
+    min-height: 100%;
     overflow-x: hidden;
     overflow-x: clip;
 }
 body {
-    background: #121212;
+    min-height: 100%;
+    margin: 0;
     overflow-x: hidden;
     overflow-x: clip;
 }
 
 html {
+    min-height: 100%;
     scroll-behavior: smooth;
     overflow-x: hidden;
     overflow-x: clip;
+}
+
+#root {
+    min-height: 100%;
 }
 
 section {
